Add documentation for create tiger api and refactor response for create tiger api
